--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ h1 {
     color: turquoise;
     font-size: larger;
 }
+
+.salmon-bg {
+    background-color: salmon;
+}
+
+#orange-bg {
+    background-color: orange;
+}
